# User_Image_System

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
api/: crud.py  datatypes.py  db.sqlite3  main.py  models.py  schemas.py  students.json
examples/: pydantic_model.py  students.sql
src/user_image_system/: __init__.py  main.py
src/user_image_system/configs/: database.py
src/user_image_system/models/: models.py
src/user_image_system/routers/: health.py  image.py  user.py
src/user_image_system/schemas/: schemas.py
src/user_image_system/utils/: crud.py  errors.py
tests/: conftest.py  fixtures.py  test_generator.py  test_images.py  test_utils_crud.py
user_image_system/: db.sqlite3  main.py  tests.py
user_image_system/models/: models.py
user_image_system/routers/: health.py  image.py  start.py  user.py
user_image_system/tests/: main.py  test_image.py  test_routers_health.py  test_routers_start.py  testes.py
user_image_system/utils/: crud.py
