[metadata]
name = user_image_system
description = API to a server
author = Caio César Oliveira 
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    user_image_system
install_requires =
    anyio==3.6.1
    fastapi==0.79.0
    greenlet==1.1.2
    idna==3.3
    pydantic==1.9.1
    sniffio==1.2.0
    SQLAlchemy==1.4.40
    starlette==0.19.1
    typing_extensions==4.3.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160